SupernovaMPE/samples/Errors/UnexpectedFunction.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.

function wow.